# nextjs-approuter-reason

./: .gitignore  .prettierignore  .vercelignore  Makefile  README.md  dune  dune-project  nextjs-approuter-reason.opam  package-lock.json  package.json  tailwind.config.js
src/: dune
src/api_v1re/: dune
src/app/: dune  index_layout.re  index_page.re  layout.js  layout.re  page.js  page.re  page.tsx
src/app/api/: dune
src/app/api/joke/: dune  handler.re  route.js  route.re
src/app/api/joke_copy/: dune  route.re
src/app/api_v1re/: dune
src/app/dogs/: dogs.re  dune  page.js  page.re  page.tsx
src/app/jokes/: dune  jokes.re  page.js  page.re  page.tsx
src/bindings/: dune  server.re
src/components/: Image.re  Joke.re  Link.re  dune
src/components/src/components_reason/: Joke.js
src/components_reason/: Joke.re  dune
src/reason_output/src/reason_src/api/: joke_handler.js
src/reason_output/src/reason_src/components/: Dog.js  IndexLayout.js  IndexPage.js  Joke.js
src/reason_src/api/: dune
src/reason_src/components/: IndexLayout.rei  IndexPage.re  Joke.re
